# python-interpreter

./: .gitignore  ClassDef.hs  Grammar.y  Interpreter.hs  Lexer.x  License  Main.hs  Parser.y  PrettyPrinter.hs  README.md  Retyper.hs  src.cabal  stack.yaml
app/: Main.hs
pysrc/: example.py
src/: ClassDef.hs  Interpreter.hs  Lexer.x  Parser.y  PrettyPrinter.hs  Retyper.hs  src.cabal
src/src/: ClassDef.hs  Interpreter.hs  Parser.y  PrettyPrinter.hs  Retyper.hs
tests/: Main.hs  Spec.hs  py.py
tests/src/compound/: elif.py  func.py  func2.py  if.py  ifElse.py  while.py
tests/src/negative/: notDefFunc.py  notDefVar.py  redefFunc.py  type.py  wrongArgs.py  wrongCntArgs.py
tests/src/simple/: compStrings.py  priorsBitwises.py  priorsNums.py  strangeVariables.py  swaps.py
tests/src/trivia/: assignAnd.py  assignBitAnd.py  assignBitOr.py  assignBitXor.py  assignBrackets.py  assignCastBool.py  assignCastFloat.py  assignCastInt.py  assignCastStr.py  assignDiv.py  assignEq.py  assignFloat.py  assignFloatDiv.py  assignGT.py  assignGTE.py  assignLT.py  assignLTE.py  assignLeftShift.py  assignMinus.py  assignMod.py  assignMult.py  assignNEq.py  assignNot.py  assignOr.py  assignPlus.py  assignPow.py  assignRightShift.py  assignSlice1.py  assignSlice2.py  assignStr.py  assignStrPlus.py  assignUnarMinus.py  assignUnarPlus.py  procBitAnd.py  procBitOr.py  procBitXor.py  procBrackets.py  procCastBool.py  procCastFloat.py  procCastInt.py  (+21 more)
