name:                src
version:             0.1.0.0
synopsis:            Synopsis for interpreter
description:         Description for interpreter

homepage:            https://github.com/lindlind/python-interpreter/blob/master/src
license:             MIT
license-file:        LICENSE
author:              lindlind
maintainer:          lindvv@yandex.ru
copyright:           2020 lindlind

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Parser
                     , ClassDef
                     , Retyper
                     , PrettyPrinter
                     , Interpreter

  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , array
                     , split
                     , containers
                     
  build-tools:         alex
                     , happy

  default-language:    Haskell2010


