name:                src
version:             0.1.0.0
synopsis:            Synopsis for interpreter
description:         Description for interpreter

homepage:            https://github.com/lindlind/python-interpreter/blob/master/src
license:             MIT
license-file:        LICENSE
author:              lindlind
maintainer:          lindvv@yandex.ru
copyright:           2020 lindlind

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Parser

                     , ClassDef
                     , Interpreter
                     , PrettyPrinter
                     , Retyper

  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , array
                     , split
                     , containers

  build-tools:         alex
                     , happy

  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:    tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:     base
                   , hspec
                   , QuickCheck >= 2.13
                   , src
                   , containers
  other-modules:  
                  --   Spec1
                  -- , Spec2

  ghc-options:       -Wall -Werror -threaded -rtsopts -with-rtsopts=-N2
  default-language:  Haskell2010


